fix disabled styles not showing up in gameplay

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -40,7 +40,7 @@ button {
   padding: .5rem;
 }
 
-.formButton:disabled {
+button:disabled {
   color: var(--brightred);
   border: 1px solid var(--brightred);
 }
